@@ -1,5 +1,5 @@
 /*
- * "$Id: banners.c,v 1.5.2.8 2004/06/29 13:15:10 mike Exp $"
+ * "$Id: banners.c,v 1.5.2.9 2004/10/04 19:48:56 mike Exp $"
  *
  *   Banner routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -211,5 +211,5 @@ compare(const banner_t *b0,	/* I - First banner */
 
 
 /*
- * End of "$Id: banners.c,v 1.5.2.8 2004/06/29 13:15:10 mike Exp $".
+ * End of "$Id: banners.c,v 1.5.2.9 2004/10/04 19:48:56 mike Exp $".
  */
