@@ -1,5 +1,5 @@
 /*
- * "$Id: quotas.c,v 1.4.2.7 2004/06/29 13:15:11 mike Exp $"
+ * "$Id: quotas.c,v 1.4.2.8 2004/10/04 19:48:56 mike Exp $"
  *
  *   Quota routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,7 +15,7 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3142 USA
+ *       Hollywood, Maryland 20636 USA
  *
  *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
@@ -234,5 +234,5 @@ compare(const quota_t *q1,		/* I - First quota record */
 
 
 /*
- * End of "$Id: quotas.c,v 1.4.2.7 2004/06/29 13:15:11 mike Exp $".
+ * End of "$Id: quotas.c,v 1.4.2.8 2004/10/04 19:48:56 mike Exp $".
  */
